--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0"
+  },
+  "dependencies": {
+    "gulp-bower": "0.0.13",
+    "gulp-notify": "^3.0.0"
   }
 }
